--- a/pages/findEmoStrength1st.html
+++ b/pages/findEmoStrength1st.html
@@ -55,14 +55,15 @@
                         <span>第一次</span>
                     </h2>
                     <div class="nav-btn d-flex justify-content-end">
-                        <a class="btn btn-outline-main-tint01 c-btn c-btn-outline-main-tint01 text-nowrap d-flex justify-content-center align-items-center" href="myEmoCardsHolder.html">上一步</a>
-                        <a class="ms-16 btn btn-main c-btn text-nowrap d-flex justify-content-center align-items-center" href="findEmoBackground.html"><span class="ms-4">下一步</span></a>
+                        <!-- <a class="btn btn-outline-main-tint01 c-btn c-btn-outline-main-tint01 text-nowrap d-flex justify-content-center align-items-center" href="myEmoCardsHolder.html">上一步</a> -->
+                        <button type="button" class="ms-16 px-md-24 btn btn-main c-btn text-nowrap d-flex justify-content-center align-items-center" id="btnNext">下一步
+                        </button>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="container">
+        <div class="container pb-112">
             <!-- 導覽 -->
             <ul  class="ms-4 mt-12 mb-36 px-12 px-sm-0 text-gray-550 fs-7">
                 <li class="mb-4 text-gray-550 fs-7">謝謝親愛的ＯＯ努力地找尋到屬於自己的情緒卡。</li>
@@ -74,15 +75,13 @@
         
             <div id="strengthArea"></div>
             <!-- 1 card & point -->
-            <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
-                <!-- card -->
+            <!-- <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                 <button type="button" class="class-card mb-md-0 bg-expectation link-gray-900 class-card-expectation" data-bs-toggle="modal" data-bs-target="#expectation01">
                     <p>期&nbsp;待</p>
                     <div class="img-box">
                         <img src="https://wavemocards.com/frontend/upload/02-expectation/expaction01-expect.svg" alt="期待">
                     </div>
                 </button>
-                <!-- point -->
                 <div class="box-strength d-flex justify-content-between align-items-center">
                     <div>
                         <input type="radio" class="d-none" name="emoStrength1st01" id="1stEmo01Point01" value="1">
@@ -115,7 +114,7 @@
                         </label>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- 2 card & point -->
             <!-- <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
                 <button type="button" class="class-card mb-md-0 bg-happy link-gray-900 class-card-happy" data-bs-toggle="modal" data-bs-target="#happy05">
@@ -204,11 +203,239 @@
     <%- include('./layout/floatButton') -%>
     
     <%- include('./layout/footer'); -%>
-    <%- include('./layout/modalEmoCards'); -%>
+
+    <!-- modalEmoCards -->
+    <ul class="listModal">
+        <li></li>
+    </ul>
+
+    <!-- 提交錯誤 Modal -->
+    <div class="modal fade" id="modalNextErr" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content rounded-4">
+                <div class="modal-body d-flex flex-column align-items-center px-48 pt-24 pb-16">
+                    <p id="modalNextErrTitle" class="mb-12 fs-3 fw-bold text-pink">尚未完成</p>
+                    <p id="modalNextErrText1" class="mt-4 fs-7 text-gray-700">
+                        每張情緒卡的情緒強度皆須選填。
+                    </p>
+                    <div style="width: 45%;">
+                        <img class="w-100 pt-24 pb-2" src="../assets/images/addCardFail.svg" alt="img" id="modalNextErrImg">
+                    </div>
+                    <span class="text-gray-400 fs-11">Illustration by <a class="link-gray-400" href="https://blush.design/artists/RyUTVuP8G4QeAAEEQgug/pablo-stanley">Pablo Stanley</a> from <a class="link-gray-400" href="https://blush.design/">blush design</a></span>
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                    <button type="button" id="modalNextErrClose" class="btn btn-pink c-btn px-24 py-8 link-white fs-6 rounded-pill" data-bs-dismiss="modal">我知道了</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <%- include('./layout/baseJs'); -%>
     <script>
+        const btnNext = document.querySelector('#btnNext');
         const strengthArea =document.querySelector('#strengthArea');
+        const listModal = document.querySelector('.listModal');
+        // 抓 local storage 的 卡片資料
+        let storageCards;
+        let getAddedCards = localStorage.getItem("addedCards");
+        storageCards=JSON.parse(getAddedCards);
+        // 將卡片資料印到版面上
+        axios.get("https://api.wavemocards.com/emotions?require=cards")
+        .then(function(response){
+            let aryData = Object.values(response.data);
+            let strCards = "";
+            let strModal = "";
+            let emo;
+            initCardsAndModals();
+            function initCardsAndModals(){
+                storageCards.forEach(function(card, i){
+                    let category = aryData[card.ID-1].Category;
+                    if(category == "快樂") {
+                        emo = "happy";
+                    } else if (category == "期待") {
+                        emo = "expectation";
+                    } else if (category == "安心") {
+                        emo = "relived";
+                    } else if (category == "不安") {
+                        emo = "unstable";
+                    } else if (category == "驚訝") {
+                        emo = "amazed";
+                    } else if (category == "低落") {
+                        emo = "sadness";
+                    } else if (category == "討厭") {
+                        emo = "hate";
+                    } else if (category == "生氣") {
+                        emo = "anger";
+                    } else if (category == "其他") {
+                        emo = "others";
+                    }
+
+                    if(card.Name.length>2){
+                        let contentCards = `
+                        <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
+                            <button type="button" class="class-card mb-md-0 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                                <p>${card.Name}</p>
+                                <div class="img-box">
+                                    <img src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                </div>
+                            </button>
+                            <div class="box-strength d-flex justify-content-between align-items-center">
+                                <div>
+                                    <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point01" value="1">
+                                    <label for="1stEmo${card.ID}Point01" class="form-label text-strength" id="label">
+                                        1
+                                        <div class="d-none">${card.ID}</div>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point02" value="2">
+                                    <label for="1stEmo${card.ID}Point02" class="form-label text-strength" id="label">
+                                        2
+                                        <div class="d-none">${card.ID}</div>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point03" value="3">
+                                    <label for="1stEmo${card.ID}Point03" class="form-label text-strength" id="label">
+                                        3
+                                        <div class="d-none">${card.ID}</div>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point04" value="4">
+                                    <label for="1stEmo${card.ID}Point04" class="form-label text-strength" id="label">
+                                        4
+                                        <div class="d-none">${card.ID}</div>
+                                    </label>
+                                </div>
+                                <div>
+                                    <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point05" value="5">
+                                    <label for="1stEmo${card.ID}Point05" class="form-label text-strength" id="label">
+                                        5
+                                        <div class="d-none">${card.ID}</div>
+                                    </label>
+                                </div>
+                            </div>
+                        </div>`;
+                        strCards+=contentCards;
+                    } else {
+                        let contentCards = `
+                            <div class="mb-40 d-flex flex-column flex-md-row justify-content-md-between align-items-center">
+                                <button type="button" class="class-card mb-md-0 bg-${emo} link-gray-900 class-card-${emo}" data-bs-toggle="modal" data-bs-target="#emo${i}">
+                                    <p>${card.Name[0]}&nbsp;${card.Name[1]}</p>
+                                    <div class="img-box">
+                                        <img src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                    </div>
+                                </button>
+                                <div class="box-strength d-flex justify-content-between align-items-center">
+                                    <div>
+                                        <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point01" value="1">
+                                        <label for="1stEmo${card.ID}Point01" class="form-label text-strength" id="label">
+                                            1
+                                            <div class="d-none">${card.ID}</div>
+                                        </label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point02" value="2">
+                                        <label for="1stEmo${card.ID}Point02" class="form-label text-strength" id="label">
+                                            2
+                                            <div class="d-none">${card.ID}</div>
+                                        </label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point03" value="3">
+                                        <label for="1stEmo${card.ID}Point03" class="form-label text-strength" id="label">
+                                            3
+                                            <div class="d-none">${card.ID}</div>
+                                        </label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point04" value="4">
+                                        <label for="1stEmo${card.ID}Point04" class="form-label text-strength" id="label">
+                                            4
+                                            <div class="d-none">${card.ID}</div>
+                                        </label>
+                                    </div>
+                                    <div>
+                                        <input type="radio" class="d-none" name="${card.ID}" id="1stEmo${card.ID}Point05" value="5">
+                                        <label for="1stEmo${card.ID}Point05" class="form-label text-strength" id="label">
+                                            5
+                                            <div class="d-none">${card.ID}</div>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>`;
+                        strCards+=contentCards;
+                    }
+                    strengthArea.innerHTML = strCards;
+                    let modalContent = `
+                        <li>
+                            <div class="modal fade px-32" id="emo${i}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered c-modal-xl-card">
+                                    <div class="modal-content bg-${emo} my-36">
+                                        <div class="modal-body d-sm-flex justify-content-between align-items-center position-relative">
+                                            <div class="box-bigCard-text">
+                                                <div class="d-flex d-md-none w-100 justify-content-center">
+                                                    <div class="d-sm-none box-bigCard-img mb-8">
+                                                        <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                                    </div>
+                                                </div>
+                                                <div class="title w-100 mb-20 d-flex justify-content-center justify-content-sm-between  align-items-end">
+                                                    <h2>${card.Name}</h2>
+                                                </div>
+                                                <div class="mb-16">
+                                                    <h3 class="mb-4">意思：</h3>
+                                                    <p>${card.Description}</p>
+                                                </div>
+                                                <div>
+                                                    <h3 class="mb-4">例句：</h3>
+                                                    <p>${card.Example}</p>
+                                                </div>
+                                            </div>
+                                            <div class="d-none d-sm-block box-bigCard-img">
+                                                <img class="w-100" src="./upload/${card.ID}.svg" alt="${card.Name}">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>`;
+                    strModal+=modalContent;
+                    listModal.innerHTML = strModal;
+                })
+            }
+            // 監聽 label 被點擊事件，並記錄所選擇的情緒強度
+            const labels = document.querySelectorAll('#label');
+            labels.forEach(function(label, i){
+                label.addEventListener("click", function(){
+                    let cardId = label.childNodes[1].textContent;
+                    let value = label.childNodes[0].textContent.trim();
+                    storageCards.forEach(function(card, index){
+                        if(cardId == card.ID) {
+                            card.strength1 = value;
+                        }
+                    })
+                })
+            })
+            // 確認是否都已選填，並將更新後的資料寫入localStorage
+            let fail=true;
+            btnNext.addEventListener("click", function(){
+                storageCards.forEach(function(card, i){
+                    if(card.strength1==undefined){
+                        fail=true;
+                        btnNext.setAttribute("data-bs-toggle", "modal");
+                        btnNext.setAttribute("data-bs-target", "#modalNextErr");
+                        btnNext.click();
+                        return
+                    } else {
+                        fail=false;
+                    }
+                })
+                if(fail==false){
+                    location.href = "findEmoBackground.html";
+                }
+            })
+        })
     </script>
   </body>
 </html>
