--- a/emoCardsHate.html
+++ b/emoCardsHate.html
@@ -237,7 +237,7 @@
       const hateCards = document.querySelector('#hateCards');
       const listModal = document.querySelector('.list');
 
-      axios.get("http://api2.wavemocards.com/emotions?require=cards")
+      axios.get("https://api.wavemocards.com/emotions?require=cards")
       .then(function(response){
         let aryData = Object.values(response.data); // 轉成「陣列」
         let aryIds = Object.keys(response.data); // 資料庫中的各卡片 id (0~64)
